# contrasleuth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: nodejs.yml
backend/: .gitignore  Cargo.toml  Cross.toml  database1.json  database1.sqlite  database2.sqlite  install-cross-compilation-images.sh
backend/capnp/: reconcile.capnp
backend/sql/B. RPC/: 1. Retrieve hashes.sql  2. Retrieve message.sql  3. Put message.sql  4. Purge expired messages.sql  4. Retrieve each and every message.sql
backend/src/: connect.rs  die_on_error.rs  inventory.rs  main.rs  message_hash.rs  mpmc_manual_reset_event.rs  proof_of_work.rs  reconcile_client.rs  reconcile_server.rs  stdio_ipc.rs
build-scripts/: package.json  test-backend.ts
capnp/: reconcile.capnp
frontend/: .gitignore  capacitor.config.json  package.json
frontend/components/: Action.tsx  Heading.tsx  Note.tsx  Section.tsx  Separator.tsx  Text.tsx  TextField.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/src/: App.tsx  index.html  index.ts  styles.scss
frontend/src/pages/: Home.tsx
frontend/src/theme/: Action.tsx  Section.tsx
frontend/styles/: index.css
shell/: .gitignore  settings.gradle
shell/app/: build.gradle
shell/app/src/androidTest/java/cf/transparent/contrasleuth/: ExampleInstrumentedTest.kt
shell/app/src/main/: AndroidManifest.xml
shell/app/src/main/java/cf/transparent/contrasleuth/: MainActivity.kt
shell/app/src/main/res/values/: strings.xml  styles.xml
shell/app/src/test/java/cf/transparent/contrasleuth/: ExampleUnitTest.kt
shell/gradle/wrapper/: gradle-wrapper.properties
sql/A. Schema/: 1. Initial schema.sql
sql/B. RPC/: 1. Retrieve hashes.sql  3. Put message.sql
src/: die_on_error.rs  log.rs  main.rs  reconcile_server.rs
