[package]
name = "contrasleuth"
version = "0.1.0"
authors = ["androiddevelopment"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashlib = "0.1.0"
clap = "2.33.0"
rusqlite = "0.20.0"
chrono = "0.4.10"
capnp-rpc = "0.10.0"
capnp = "0.10.3"
tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
# https://stackoverflow.com/questions/58611380/is-there-a-way-that-we-can-convert-from-futures-0-1-to-the-standard-library-futu
futures-03 = { package = "futures", version = "0.3.1", features = ["compat"] }
async-std = "1.2.0"

[build-dependencies]
capnpc = "0.10.2"
