[package]
name = "contrasleuth"
version = "0.1.0"
authors = ["transparentCF"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rusqlite = { version = "0.21.0", features = ["bundled"] }
chrono = "0.4.10"
capnp = "0.11.1"
capnp-rpc = "0.11.0"
futures = "0.3.1"
async-std = "1.0"
rust-crypto = "0.2.36"
checked = "0.5.0"
futures-intrusive = "0.2.2"
r2d2 = "0.8.8"
r2d2_sqlite = "0.13.0"

[build-dependencies]
capnpc = "0.10.2"
